how to use Agent2Agent (A2A) Protocol to have agents interact with each other

--- a/day_5/day5.ipynb
+++ b/day_5/day5.ipynb
@@ -371,16 +371,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "43d40d0a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (99273723.py, line 57)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[23], line 57\u001b[1;36m\u001b[0m\n\u001b[1;33m    with open(file_path \"w\") as f:\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📝 Saved to: D:\\5Days_Google_AI_course\\day_5\\product_catalog_server.py\n",
+      "🚀 Starting Product Catalog Agent server...\n",
+      "   Waiting for server to be ready...\n",
+      "...\n",
+      "✅ Product Catalog Agent server is running!\n",
+      "   Server URL: http://localhost:8001\n",
+      "📝 Saved to: D:\\5Days_Google_AI_course\\day_5\\product_catalog_server.py\n",
+      "🚀 Starting Product Catalog Agent server...\n",
+      "   Waiting for server to be ready...\n",
+      "\n",
+      "✅ Product Catalog Agent server is running!\n",
+      "   Server URL: http://localhost:8001\n"
      ]
     }
    ],
@@ -600,10 +610,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f66c53c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📋 Product Catalog Agent Card:\n",
+      "{\n",
+      "  \"capabilities\": {},\n",
+      "  \"defaultInputModes\": [\n",
+      "    \"text/plain\"\n",
+      "  ],\n",
+      "  \"defaultOutputModes\": [\n",
+      "    \"text/plain\"\n",
+      "  ],\n",
+      "  \"description\": \"External vendor's product catalog agent that provides product information and availability.\",\n",
+      "  \"name\": \"product_catalog_agent\",\n",
+      "  \"preferredTransport\": \"JSONRPC\",\n",
+      "  \"protocolVersion\": \"0.3.0\",\n",
+      "  \"skills\": [\n",
+      "    {\n",
+      "      \"description\": \"External vendor's product catalog agent that provides product information and availability. \\n    I am a product catalog specialist from an external vendor.\\n    When asked about products, use the get_product_info tool to fetch data from the catalog.\\n    Provide clear, accurate product information including price, availability, and specs.\\n    If asked about multiple products, look up each one.\\n    Be professional and helpful.\\n    \",\n",
+      "      \"id\": \"product_catalog_agent\",\n",
+      "      \"name\": \"model\",\n",
+      "      \"tags\": [\n",
+      "        \"llm\"\n",
+      "      ]\n",
+      "    },\n",
+      "    {\n",
+      "      \"description\": \"Get product information for a given product.\",\n",
+      "      \"id\": \"product_catalog_agent-get_product_info\",\n",
+      "      \"name\": \"get_product_info\",\n",
+      "      \"tags\": [\n",
+      "        \"llm\",\n",
+      "        \"tools\"\n",
+      "      ]\n",
+      "    }\n",
+      "  ],\n",
+      "  \"supportsAuthenticatedExtendedCard\": false,\n",
+      "  \"url\": \"http://localhost:8001\",\n",
+      "  \"version\": \"0.0.1\"\n",
+      "}\n",
+      "\n",
+      "✨ Key Information:\n",
+      "   Name: product_catalog_agent\n",
+      "   Description: External vendor's product catalog agent that provides product information and availability.\n",
+      "   URL: http://localhost:8001\n",
+      "   Skills: 2 capabilities exposed\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch the agent card from the running server\n",
     "try:\n",
@@ -652,10 +711,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "816d67b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Remote Product Catalog Agent proxy created!\n",
+      "   Connected to: http://localhost:8001\n",
+      "   Agent card: http://localhost:8001/.well-known/agent-card.json\n",
+      "   The Customer Support Agent can now use this like a local sub-agent!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a RemoteA2aAgent that connects to our Product Catalog Agent\n",
     "# This acts as a client-side proxy - the Customer Support Agent can use it like a local agent\n",
@@ -674,10 +744,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "c5d7789c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Customer Support Agent created!\n",
+      "   Model: gemini-2.5-flash-lite\n",
+      "   Sub-agents: 1 (remote Product Catalog Agent via A2A)\n",
+      "   Ready to help customers!\n"
+     ]
+    }
+   ],
    "source": [
     "# Now create the Customer Support Agent that uses the remote Product Catalog Agent\n",
     "customer_support_agent = LlmAgent(\n",
@@ -725,10 +806,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a90bddaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Testing A2A Communication...\n",
+      "\n",
+      "\n",
+      "👤 Customer: Can you tell me about the iPhone 15 Pro? Is it in stock?\n",
+      "\n",
+      "🎧 Support Agent response:\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-19 22:34:10,997 - INFO - google_llm.py:133 - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n",
+      "2025-11-19 22:34:11,958 - INFO - _client.py:1740 - HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent \"HTTP/1.1 200 OK\"\n",
+      "2025-11-19 22:34:11,961 - INFO - google_llm.py:186 - Response received from the model.\n",
+      "2025-11-19 22:34:11,961 - WARNING - types.py:6324 - Warning: there are non-text parts in the response: ['function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
+      "2025-11-19 22:34:12,708 - INFO - _client.py:1740 - HTTP Request: GET http://localhost:8001/.well-known/agent-card.json \"HTTP/1.1 200 OK\"\n",
+      "2025-11-19 22:34:12,708 - INFO - card_resolver.py:83 - Successfully fetched agent card data from http://localhost:8001/.well-known/agent-card.json: {'capabilities': {}, 'defaultInputModes': ['text/plain'], 'defaultOutputModes': ['text/plain'], 'description': \"External vendor's product catalog agent that provides product information and availability.\", 'name': 'product_catalog_agent', 'preferredTransport': 'JSONRPC', 'protocolVersion': '0.3.0', 'skills': [{'description': \"External vendor's product catalog agent that provides product information and availability. \\n    I am a product catalog specialist from an external vendor.\\n    When asked about products, use the get_product_info tool to fetch data from the catalog.\\n    Provide clear, accurate product information including price, availability, and specs.\\n    If asked about multiple products, look up each one.\\n    Be professional and helpful.\\n    \", 'id': 'product_catalog_agent', 'name': 'model', 'tags': ['llm']}, {'description': 'Get product information for a given product.', 'id': 'product_catalog_agent-get_product_info', 'name': 'get_product_info', 'tags': ['llm', 'tools']}], 'supportsAuthenticatedExtendedCard': False, 'url': 'http://localhost:8001', 'version': '0.0.1'}\n",
+      "2025-11-19 22:34:12,708 - INFO - remote_a2a_agent.py:311 - Successfully resolved remote A2A agent: product_catalog_agent\n",
+      "2025-11-19 22:34:16,403 - INFO - _client.py:1740 - HTTP Request: POST http://localhost:8001 \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The iPhone 15 Pro is available for $999. We have low stock, with only 8 units remaining. It comes with a 128GB storage capacity and a titanium finish.\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "async def test_a2a_communication(user_query: str):\n",
     "    \"\"\"\n",
@@ -793,10 +910,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "03a4f74d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-19 22:34:21,967 - INFO - google_llm.py:133 - Sending out request, model: gemini-2.5-flash-lite, backend: GoogleLLMVariant.GEMINI_API, stream: False\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "👤 Customer: I'm looking for a laptop. Can you compare the Dell XPS 15 and MacBook Pro 14 for me?\n",
+      "\n",
+      "🎧 Support Agent response:\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-19 22:34:22,660 - INFO - _client.py:1740 - HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent \"HTTP/1.1 200 OK\"\n",
+      "2025-11-19 22:34:22,667 - INFO - google_llm.py:186 - Response received from the model.\n",
+      "2025-11-19 22:34:22,669 - WARNING - types.py:6324 - Warning: there are non-text parts in the response: ['function_call'], returning concatenated text result from text parts. Check the full candidates.content.parts accessor to get the full model response.\n",
+      "2025-11-19 22:34:24,692 - INFO - _client.py:1740 - HTTP Request: POST http://localhost:8001 \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainly! Here's a comparison of the Dell XPS 15 and the MacBook Pro 14:\n",
+      "\n",
+      "**Dell XPS 15:**\n",
+      "*   **Price:** $1,299\n",
+      "*   **Availability:** In Stock (45 units)\n",
+      "*   **Display:** 15.6\"\n",
+      "*   **RAM:** 16GB\n",
+      "*   **Storage:** 512GB SSD\n",
+      "\n",
+      "**MacBook Pro 14\":**\n",
+      "*   **Price:** $1,999\n",
+      "*   **Availability:** In Stock (22 units)\n",
+      "*   **Chip:** M3 Pro\n",
+      "*   **RAM:** 18GB\n",
+      "*   **Storage:** 512GB SSD\n",
+      "\n",
+      "Both laptops are currently in stock, but the Dell XPS 15 is more affordably priced. The MacBook Pro 14\" comes with a more advanced M3 Pro chip and slightly more RAM.\n",
+      "\n",
+      "Do you have any other questions or would you like more details on either of these models?\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Test comparing multiple products\n",
     "# Try More Examples\n",
